Added sans-serif font fallback to menu

--- a/lib/dedalo/menu/css/menu.less
+++ b/lib/dedalo/menu/css/menu.less
@@ -134,7 +134,8 @@ background-color: #FFFF00;
 	@menu_box_shadow : 5px 5px 15px rgba(0, 0, 0, 0.1);
 
 	#menu {
-		font-family: "Oxygen-light";
+		font-family: "Oxygen-light", sans-serif;
+		//font-family: system, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Lucida Grande', "Oxygen-light", sans-serif;
 		//-webkit-font-smoothing: subpixel-antialiased;
 		z-index: 100;
 		float: left;
