Minor clean code

--- a/lib/dedalo/html_page/css/html_page.less
+++ b/lib/dedalo/html_page/css/html_page.less
@@ -52,6 +52,7 @@ body {
 	background-attachment: fixed;
 	/*font: 12px / 18px "lucida grande", "lucida sans unicode", helvetica, arial, verdana, sans-serif;*/
 	font-family: "Oxygen", sans-serif;
+	//font-family: system, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Lucida Grande', 'Oxygen', sans-serif;
 	font-size: 12px;	
 	color: #333;
 	//-webkit-font-smoothing: antialiased; // Da problemas con el tesauro !
@@ -88,7 +89,7 @@ label {
 	right: 25px;
 }
 .main_font_light {
-	font-family: "Oxygen-light", sans-serif;
+	font-family: "Oxygen-light", sans-serif;	
 }
 .main_font_bold {
 	font-family: "Oxygen-Bold", sans-serif;
