--- a/lib/dedalo/component_select/css/component_select.less
+++ b/lib/dedalo/component_select/css/component_select.less
@@ -23,7 +23,7 @@
 		padding: 2px;
 		cursor: pointer;
 		margin: 0;
-		max-width: 90%;
+		width: 80%;
 		-webkit-appearance: none;
 		-moz-appearance: none;
 		appearance: none;
