Add button click opacity for component_image canvas tool

--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -123,7 +123,12 @@
 			z-index: 99;
 			height: 1.5em;	
 
-			
+			>input {
+
+				&:active {
+					opacity: 0.5;
+				}
+			}
 			}
 			.main_buttons input[type="button"] {
 				border: 1px solid #DADADA;
