Page css background color mark to identify v6

--- a/lib/dedalo/html_page/css/html_page.less
+++ b/lib/dedalo/html_page/css/html_page.less
@@ -125,6 +125,8 @@ q:before, q:after { content:''; content:none; }
 	height: 100%;
 	margin: 0;	
 	height: 100vh;
+
+	background-color: #F5E53A;
 }
 .daleks {
 	//background-image: url('../../themes/default/daleks.jpg');
