Added page css for debug

--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<link href="css/page.css" rel="stylesheet">
 	<script src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
 	<script type="module">
 		import {page} from "<?php echo DEDALO_LIB_BASE_URL ?>/page/js/page.js"
