Clean page css code

--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -10,6 +10,12 @@
 			margin-bottom: 0.5em;
 			padding: 0.5em;
 
+			.section_group {
+				padding: 5px;
+				border: 1px solid #BFBFBF;
+				background-color: bisque;
+			}
+
 			.wrapper_component {
 				background-color: #F3F3F3;
 				width: auto;
