--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -4,7 +4,7 @@
 	<title></title>
 	<link href="css/page.css" rel="stylesheet">
 	<script src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
-	<script type="module">
+	<script type="module" async>
 		import {page} from "<?php echo DEDALO_LIB_BASE_URL ?>/page/js/page.js"
 		const current_page  = new page( <?php echo $page_options_json ?> )
 		current_page.init();
