--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -1,11 +1,11 @@
 
-
-
 // temporal debug css
 	#test_container {
 		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 		font-size: 1em;
 		display: flex;
+
+		ol, ul { list-style:none; }
 
 		.section_record {
 			background-color: #DBF5FF;
@@ -42,7 +42,6 @@
 				input {
 					padding: 0.4em;
 				}
-
 				
 			}
 
@@ -50,7 +49,7 @@
 				background-color: unset;
     			color: unset;
     			font-style: italic;
-			}
+			}	
 			    
 		}
 
@@ -59,3 +58,5 @@
 		background-color: #f0f8ffd1;
 		padding: 1em;
 	}
+
+
