Added test css to css_section_id class.

--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -53,6 +53,15 @@
 			    
 		}
 
+		.css_section_id {
+			min-height: 1.2em;
+			border-right: 1px solid #ebebeb;
+			padding-left: 10px;
+			padding-right: 10px;
+			background-color: rgba(129,129,129,0.8);
+			color: #fff !important;
+			width: 10%;			
+		}
 	}
 	pre {
 		background-color: #f0f8ffd1;
