Fixed get label issue on safari (const instead var definition)

--- a/lib/dedalo/html_page/html/html_page.phtml
+++ b/lib/dedalo/html_page/html/html_page.phtml
@@ -157,7 +157,7 @@ const page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSO
 		# if($modo!='relation') include(DEDALO_LIB_BASE_PATH.'/html_page/html/html_page_debug.phtml');
 		if(SECTION_TIPO === 'test65'){
 			?>
-				<div id='section_content'>PATATAAAAA
+				<div id='section_content'>
 					
 					<script type="module" src="<?php echo DEDALO_LIB_BASE_URL ?>/test/page.js"></script>
 					<script>
