--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -3,8 +3,8 @@
 <head>
 	<title></title>
 	<link href="css/page.css" rel="stylesheet">
-	<script async src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
-	<script type="module" async>
+	<script src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
+	<script type="module" >
 		import {page} from "<?php echo DEDALO_LIB_BASE_URL ?>/page/js/page.js"
 		const current_page  = new page( <?php echo $page_options_json ?> )
 		current_page.init();
