Add active class to see the selected component

--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -53,6 +53,12 @@
 			    
 		}
 
+		// SELECTED_WRAP
+			.active {	
+				background-color: rgb(230, 230, 230) !important;
+			}
+
+
 		.css_section_id {
 			min-height: 1.2em;
 			border-right: 1px solid #ebebeb;
