Added pattern validations to email component and some messages and css to show them clearly to the user.

--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -68,6 +68,10 @@
 			color: #fff !important;
 			width: 10%;			
 		}
+
+		.css_email_error { background-color:red !important;}
+		.css_email_error:hover { background-color:orange;}
+
 	}
 	pre {
 		background-color: #f0f8ffd1;
