Added comment and change in css so it can be change in close future.

--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -69,7 +69,7 @@
 			width: 10%;			
 		}
 
-		.css_email_error { background-color:red !important;}
+		.css_email_error { background-color:red;}
 		.css_email_error:hover { background-color:orange;}
 
 	}
