Clean and update code varios

--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -51,11 +51,19 @@
     			font-style: italic;
 			}	
 			    
-		}
+		}//end .section_record
 
+		
 		// SELECTED_WRAP
-			.active {	
+			.active {
+				transition: background-color 0.3s ease;
 				background-color: rgb(230, 230, 230) !important;
+			}
+			
+
+		// error
+			.error {
+				background-color: red !important;
 			}
 
 
