--- a/lib/dedalo/component_autocomplete/html/component_autocomplete_edit.phtml
+++ b/lib/dedalo/component_autocomplete/html/component_autocomplete_edit.phtml
@@ -86,6 +86,9 @@
 					$autosearch_options_html = '';
 					$autosearch_options_js 	 = '';
 					$autosearch_options_id 	 = 'autosearch_options_' . $section_tipo .'_'. $tipo .'_'. $parent;
+					if ($modo==='search') {
+						$autosearch_options_id .= '_'.microtime(true);
+					}					
 					$autosearch_options_html .= '<div id="' . $autosearch_options_id . '" class="autosearch_options hide" data-tipo="'.$tipo.'">';
 
 		
