--- a/lib/dedalo/page/css/page.less
+++ b/lib/dedalo/page/css/page.less
@@ -69,8 +69,9 @@
 
 		// success
 			.success {
-				//background-color: green !important;
-				animation: cssAnimation 2s ease-out;
+				transition: background-color 0.3s ease;
+				background-color: green !important;
+				//animation: cssAnimation 2s ease-out;
 			}
 
 			@keyframes cssAnimation {
