Reorganized css files

--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -1,8 +1,7 @@
 
-
-pre {
-	background-color: #f0f8ffd1;
-	padding: 1em;
+input {
+	//border: none;
+	padding:0.4em;
 }
 
 
@@ -49,14 +48,14 @@ pre {
 
 
 // component specific
-		.css_section_id99 {
-			min-height: 1.2em;
-			border-right: 1px solid #ebebeb;
-			padding-left: 10px;
-			padding-right: 10px;
-			background-color: rgba(129,129,129,0.8);
-			color: #fff !important;
-			width: 10%;			
-		}
-		.css_email_error { background-color:red;}
-		.css_email_error:hover { background-color:orange;}
+	.css_section_id99 {
+		min-height: 1.2em;
+		border-right: 1px solid #ebebeb;
+		padding-left: 10px;
+		padding-right: 10px;
+		background-color: rgba(129,129,129,0.8);
+		color: #fff !important;
+		width: 10%;			
+	}
+	.css_email_error { background-color:red;}
+	.css_email_error:hover { background-color:orange;}
