--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -5,6 +5,10 @@
 	@import "layout/layout.less";
 	@import "layout/page.less";
 
+// groupers
+	/**/
+	@import "../../section_group/css/section_group.less";
+	@import "../../section_tab/css/section_tab.less";
 
 // components
 	/**/
@@ -57,3 +61,4 @@
 	@import "../../@{component_prefix}svg/css/@{component_prefix}svg@{component_sufix}.less";
 	@import "../../@{component_prefix}template/css/@{component_prefix}template@{component_sufix}.less";
 	@import "../../@{component_prefix}text_area/css/@{component_prefix}text_area@{component_sufix}.less";
+
