--- a/lib/dedalo/page/css/layout/reset.less
+++ b/lib/dedalo/page/css/layout/reset.less
@@ -1,5 +1,31 @@
+// Reset.
+// Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
 
-// border box reset
+	html, body, div, span, applet, object,
+	iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+	pre, a, abbr, acronym, address, big, cite,
+	code, del, dfn, em, img, ins, kbd, q, s, samp,
+	small, strike, strong, sub, sup, tt, var, b,
+	u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+	form, label, legend, table, caption, tbody,
+	tfoot, thead, tr, th, td, article, aside,
+	canvas, details, embed, figure, figcaption,
+	footer, header, hgroup, menu, nav, output, ruby,
+	section, summary, time, mark, audio, video {
+		margin: 0;
+		padding: 0;
+		border: 0;
+		font-size: 100%;
+		font: inherit;
+		vertical-align: baseline;
+	}
+
+	article, aside, details, figcaption, figure,
+	footer, header, hgroup, menu, nav, section {
+		display: block;
+	}
+
+	// border box reset
 	html {
 	  box-sizing: border-box;
 	}
@@ -7,20 +33,60 @@
 	  box-sizing: inherit;
 	}
 
-// global
-	input {
-		padding: 0.4em;
+	body {
+		line-height: 1;
 	}
-	mark {
-		background-color: unset;
-		color: unset;
-		font-style: italic;
-	}	
+
 	ol, ul {
 		list-style:none;
 		margin: 0;
 		padding: 0;
 	}
+
+	blockquote,	q {
+		quotes: none;
+
+		&:before,
+		&:after {
+			content: '';
+			content: none;
+		}
+	}
+
+	table {
+		border-collapse: collapse;
+		border-spacing: 0;
+	}
+
+	body {
+		-webkit-text-size-adjust: none;
+	}
+
+	mark {
+		background-color: transparent;
+		color: inherit;
+		font-style: italic;
+	}
+
+	input::-moz-focus-inner {
+		border: 0;
+		padding: 0;
+	}
+
+	//input, select, textarea {
+	//	-moz-appearance: none;
+	//	-webkit-appearance: none;
+	//	-ms-appearance: none;
+	//	appearance: none;
+	//}
+
+	pre {
+		background-color: #f0f8ffd1;
+		padding: 1em;
+		font-family: monospace;
+	}
+
+
 
 
 
