--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -857,6 +857,14 @@
 
 
 
-
+// dedalo v6
+	.wrapper_component.component_portal {
+		>.label {
+			flex-basis: 100%;
+		}
+		>.content_data {
+			padding: 0;
+		}
+	}
 
 	
