--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -32,11 +32,13 @@
 	.section_record {
 		// flex base config
 		.section_record_base;
-		background-color: #DBF5FF;
+		//background-color: #DBF5FF;
+		outline: 1px solid rgba(216, 216, 216, 0.43);
 
 		// section_group
 			.section_group {
-				background-color: bisque;
+				//background-color: bisque;
+				//outline: 1px solid rgba(216, 216, 216, 0.43);
 				width: 100%;
 				//border: 1px solid #BFBFBF;
 
@@ -69,7 +71,7 @@
 				.component_base;
 
 				background-color: #FBFBFB;				
-				border: 1px solid rgba(216, 216, 216, 0.43);
+				outline: 1px solid rgba(216, 216, 216, 0.43);
 
 				>*{
 					padding: 1em;
