--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -4,6 +4,10 @@ input {
 	padding:0.4em;
 }
 
+html {
+	.global_font;
+}
+
 
 // active. selected_wrap
 	.active {
@@ -39,8 +43,7 @@ input {
 
 
 // temporal debug css
-	section {
-		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+	section {		
 		font-size: 1em;	
 		display: flex;		
 	}	
