--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -2,8 +2,9 @@
 // layout general
 	
 	@import "layout/reset.less";
+	@import "layout/fonts.less";
 	@import "layout/layout.less";
-	@import "layout/page.less";
+	@import "layout/page.less";	
 
 // groupers
 	/**/
