--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -25,7 +25,7 @@
 	display: flex;
 	flex-wrap: wrap;	
 	flex: 1 1 50%; // <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> 
-	flex-grow: initial;
+	//flex-grow: initial;
 }
 
 
