Refactorized and fix issues. New functional version v6.0.0.alpha.6

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -860,11 +860,11 @@
 // dedalo v6
 	.wrapper_component.component_portal {
 		>.label {
-			flex-basis: 100%;
+			flex-basis: 100% !important;
 		}
 		>.content_data {
 			padding: 0;
-			flex-basis: 100%;
+			flex-basis: 100% !important;
 		}
 	}
 
