CSS small changes

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -867,5 +867,8 @@
 			flex-basis: 100% !important;
 		}
 	}
-
+	.section_record.list>.component_portal_list {
+		padding: 0;
+		flex-grow: 2;
+	}
 	
