--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -1,12 +1,24 @@
 
-input {
+input, textarea {
 	//border: none;
 	padding:0.4em;
+	border: 1px solid #E0E0E0;
+    width: 100%;
 }
+
+	
 
 html {
 	.global_font;
 }
+
+
+
+// #main
+	#main {
+		transition: opacity 0.15s ; // linear
+	}
+
 
 
 // active. selected_wrap
