--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -311,5 +311,22 @@
 		}*/
 	
 
+// v6
+	.component_image_edit, .component_image_list {
+		background-repeat: no-repeat;
+		background-size: contain;
+		width: 100%;
+		height: 100%;
+		background-color: white;
+		background-position: center;
+	}
+	.component_image_list {		
+		height: 9em;
+	}
+	.component_image_edit {		
+		height: 10em;
+    	margin: 1em;
+	}
 
+	
 
