--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -144,6 +144,7 @@
 			padding: 1em;
 			padding-left: 1em;
 			padding-right: 0;
+			//padding: 0;
 			flex: 1 0;
 			outline: 1px solid #EAEAEA;
 		}
