New code clean and changes pack

--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -6,7 +6,7 @@
 	<link href="<?php echo DEDALO_LIB_BASE_URL ?>/common/css/structure.css" rel="stylesheet">	
 </head>
 <body>
-	<div id="main"></div>
+	<div id="main" class="hide"></div>
 	<div id="debug" class="debug hide"></div>
 </body>
 <script src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
