CSS clen and extend code

--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -319,13 +319,14 @@
 		height: 100%;
 		background-color: white;
 		background-position: center;
+		flex: 1 0 auto;
 	}
 	.component_image_list {		
-		height: 9em;
+		height: 6em;
 	}
 	.component_image_edit {		
 		height: 10em;
-    	margin: 1em;
+    	//margin: 1em;
 	}
 
 	
