A lot of little fixes and clean code

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -32,7 +32,6 @@
 
 
 .section.edit {
-
 	display: flex;
 
 	//&:before {
@@ -161,5 +160,14 @@
 	}	
 
 
-	
+// header_wrapper_list
+	.header_wrapper_list {
+		background-color: #CBE3BE;
+		display: flex;
+		width: 100%;
+
+		>div {
+			flex: 1 1 auto;
+		}
+	}
 
