--- a/lib/dedalo/page/css/layout/reset.less
+++ b/lib/dedalo/page/css/layout/reset.less
@@ -81,7 +81,7 @@
 	//}
 
 	pre {
-		background-color: #f0f8ffd1;
+		background-color: rgba(240, 248, 255, 0.4);
 		padding: 1em;
 		font-family: monospace;
 	}
