Minor css layout fixes

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -147,6 +147,7 @@
 		// //flex-wrap: wrap;
 		display: grid;
 		width: 100%;
+		height: 100%;
 		//outline: 1px solid rgba(216, 216, 216, 0.7);
 			
 		>div {
@@ -160,6 +161,7 @@
 
 		>.breakdown {
 			padding: 0;
+			background-color: #E0ED94 !important;
 		}
 
 	}	
