Minor css fixes

--- a/lib/dedalo/component_image/css/component_image.less
+++ b/lib/dedalo/component_image/css/component_image.less
@@ -314,7 +314,7 @@
 // v6
 	.component_image_edit, .component_image_list {
 		background-repeat: no-repeat;
-		background-size: contain;
+		background-size: cover;
 		width: 100%;
 		height: 100%;
 		background-color: white;
