--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -141,6 +141,7 @@
 	
 // section_record list
 	.section_record.list {
+		position: relative;
 		background-color: #f7f7f7;
 		// display: flex;
 		// flex: 0 0 100%;		
@@ -149,6 +150,27 @@
 		width: 100%;
 		height: 100%;
 		//outline: 1px solid rgba(216, 216, 216, 0.7);
+
+		// hover main row
+		.section > &&:hover {
+			//&:after {
+			//	content: " ";
+			//	display: block;
+			//	position: absolute;
+			//	left: 0;
+			//	bottom: 0;
+			//	height: 100%;
+			//	width: 100%;
+			//	//background-color: #000000;				
+			//	//opacity: 0.035;	
+			//	border-bottom: 3px solid #000000;
+			//	border-top: 3px solid #000000;	
+			//}
+			div {
+				background-color: #E4E4E4 !important
+			}
+					
+		}
 			
 		>div {
 			padding: 1em;
@@ -157,14 +179,17 @@
 			//padding: 0;
 			flex: 1 0;
 			outline: 1px solid #EAEAEA;
+
+			word-wrap: break-word;
+    		overflow: hidden;
 		}
 
 		>.breakdown {
 			padding: 0;
-			background-color: #E0ED94 !important;
-		}
-
+			//background-color: #E0ED94 !important;
+		}		
 	}	
+
 
 
 // header_wrapper_list
