--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -148,7 +148,7 @@
 		// //flex-wrap: wrap;
 		display: grid;
 		width: 100%;
-		height: 100%;
+		height: 100%;		
 		//outline: 1px solid rgba(216, 216, 216, 0.7);
 
 		// hover main row
@@ -202,7 +202,9 @@
     	top: 0;
     	//z-index: 1;
     	display: grid;
-    	font-weight: bold;
+    	line-height: 1.1em;
+    	//font-weight: bold;
+    	z-index: 1;
 
 		>div {
 			//display: flex;
