Fixed error when component_input_text mode is edit_in_list role was assigned wrongly

--- a/lib/dedalo/component_input_text/html/component_input_text_edit.phtml
+++ b/lib/dedalo/component_input_text/html/component_input_text_edit.phtml
@@ -80,9 +80,10 @@
 				if (isset($propiedades->read_only) && $propiedades->read_only==true) {
 					$read_only = 'readonly';
 				}
-				if (isset($role) && $role=="source_lang") {
+				if (isset($role) && $role==='source_lang') {					
 					$read_only = 'readonly';
 				}
+					
 
 				# Button add
 				if (isset($propiedades->multi_value) && $propiedades->multi_value==true) {
